--- a/docker-compose-kafka.yaml
+++ b/docker-compose-kafka.yaml
@@ -8,10 +8,10 @@ services:
     ports:
       - '9092:9092'
     environment:
-      KAFKA_ENABLE_KRAFT: yes
+      KAFKA_ENABLE_KRAFT: "yes"
       KAFKA_BROKER_ID: 1
       KAFKA_CFG_NODE_ID: 1
-      ALLOW_PLAINTEXT_LISTENER: yes
+      ALLOW_PLAINTEXT_LISTENER: "yes"
       KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 1@127.0.0.1:9093
       KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_CFG_INTER_BROKER_LISTENER_NAME: PLAINTEXT
